2005-04-04  Carl Worth  <cworth@cworth.org>

	* src/cairo.h (cairo_set_target_image,
	cairo_image_surface_create_for_data):
	* src/cairo.c: (cairo_set_target_image): Change type of data
	parameter from char* to unsigned char*.

	* src/cairo-ft-font.c: (_cairo_ft_font_create_glyph):
	* src/cairo-image-surface.c: (cairo_image_surface_create_for_data):
	* src/cairo-pattern.c:
	(_cairo_pattern_acquire_surface_for_gradient):
	* test/buffer-diff.c: (buffer_diff):
	* test/buffer-diff.h:
	* test/write-png.c: (write_png_argb32):
	* test/write-png.h: Propagate the unsigned char* change down the
	stack.

	* src/cairo-xlib-surface.c: (_get_image_surface): Add cast since
	XImage uses char* rather than unsigned char*.
	
	* src/cairo-png.c: (cairo_image_surface_create_for_png): Fix
	memory leak of image data.

	* test/cairo-test.c: (cairo_test), (cairo_test_create_png_pattern):
	* test/cairo-test.h: Switch to use cairo_surface_write_png rather
	than a custom write_png_argb32.

	* test/.cvsignore:
	* test/Makefile.am:
	* test/create-for-png-ref.png:
	* test/create-for-png.c: (draw), (main): Add test to exercise the
	cairo_image_surface_create_for_png function.

2005-04-04  Carl Worth  <cworth@cworth.org>

	* TODO: Remove items for PNG backend removal and trapezoid
	reasterization re-implementation since they have been completed.

2005-04-04  Carl Worth  <cworth@cworth.org>

	* src/cairo.c:
	* src/cairo.h: Drop cairo_default_matrix since it is now always
	identical to cairo_identity_matrix.

	* src/cairo-gstate-private.h:
	* src/cairo-gstate.c: (_cairo_gstate_init),
	(_cairo_gstate_set_target_surface): Remove gstate->pixels_per
	inch. Change default matrix to always be the identity matrix.

	* src/cairo-glitz-surface.c:
	* src/cairo-image-surface.c:
	* src/cairo-pdf-surface.c:
	* src/cairo-ps-surface.c:
	* src/cairo-quartz-surface.c:
	* src/cairo-surface.c:
	* src/cairo-win32-surface.c:
	* src/cairo-xcb-surface.c:
	* src/cairo-xlib-surface.c: