@@ -1,3 +1,8 @@
+2005-04-06  Carl Worth  <cworth@cworth.org>
+
+	* src/cairo-cache.c (_cairo_cache_init): Fix reversed arguments in
+	call to calloc.
+
 2005-04-04  Carl Worth  <cworth@cworth.org>
 
 	* src/cairo.h (cairo_set_target_image,
